--- a/EcoStops/build.xml
+++ b/EcoStops/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="EchoStops" default="default" basedir=".">
-    <description>Builds, tests, and runs the project EchoStops.</description>
+<project name="EcoStops" default="default" basedir=".">
+    <description>Builds, tests, and runs the project EcoStops.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="EchoStops-impl.jar">
+        <target name="run" depends="EcoStops-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
