--- a/EcoStops/nbproject/project.properties
+++ b/EcoStops/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EcoStops
+application.vendor=k_k_r
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,8 +25,9 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/EchoStops.jar
+dist.jar=${dist.dir}/EcoStops.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.gs-algo-1.3-javadoc.jar=AdditionalLibs/gs-algo-1.3-javadoc.jar
 file.reference.gs-algo-1.3-sources.jar=AdditionalLibs/gs-algo-1.3-sources.jar
@@ -72,7 +74,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=echostops.EcoStops
+main.class=echostops.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
