--- a/EcoStops/nbproject/project.properties
+++ b/EcoStops/nbproject/project.properties
@@ -74,7 +74,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=echostops.main
+main.class=EcoStops.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
