--- a/EcoStops/nbproject/project.properties
+++ b/EcoStops/nbproject/project.properties
@@ -39,7 +39,7 @@ file.reference.gs-ui-1.3-javadoc.jar=AdditionalLibs/gs-ui-1.3-javadoc.jar
 file.reference.gs-ui-1.3-sources.jar=AdditionalLibs/gs-ui-1.3-sources.jar
 file.reference.gs-ui-1.3.jar=AdditionalLibs/gs-ui-1.3.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.gs-algo-1.3-javadoc.jar}:\
     ${file.reference.gs-algo-1.3-sources.jar}:\
