--- a/EcoStops/nbproject/private/private.properties
+++ b/EcoStops/nbproject/private/private.properties
@@ -3,5 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/mayra/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\k_k_r\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
 
